--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Banner from '../components/site/homepage/Banner.astro';
-import Layout from '../layouts/Layout.astro';
+import Banner from '@components/site/homepage/Banner.astro';
+import Layout from '@layouts/Layout.astro';
 import Hero from '@components/site/Hero.astro';
 import CurrentInventory from '@components/site/homepage/CurrentInventory.astro';
 
