--- a/src/components/site/homepage/CurrentInventory.astro
+++ b/src/components/site/homepage/CurrentInventory.astro
@@ -1,6 +1,6 @@
 ---
-import Button from '../Button.astro';
-import CardWithPicture from '../CardWithPicture.astro';
+import Button from '@components/site/Button.astro';
+import CardWithPicture from '@components/site/CardWithPicture.astro';
 
 import AdjustableBase from '@src/images/adustable-base.png';
 import CopperLux from '@src/images/copper-lux-hybrid.png';
