--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import TopBar from '../components/site/TopBar.astro';
-import Announcement from '../components/site/Announcement.astro';
+import TopBar from '@components/site/TopBar.astro';
+import Announcement from '@components/site/Announcement.astro';
 
 interface Props {
   title: string;
