--- a/src/components/site/BottomBar.astro
+++ b/src/components/site/BottomBar.astro
@@ -3,37 +3,44 @@ import Phone from './homepage/FeatureIcons/Phone.astro';
 ---
 
 <div class='max-w-7xl px-6 pb-8 mx-auto mt-20'>
-  <footer class='py-20 border-t flex justify-between'>
-    <a href='/' class='flex-initial'>
-      <div class='flex items-center'>
-        <img
-          src='/bed-brokers-logo.svg'
-          width='500'
-          height='500'
-          class='w-16 h-16 sm:w-24 sm:h-24'
-        />
-        <h1 class='ml-1 text-2xl sm:text-4xl font-bold'>
-          <span class='text-custom-blue'>Bed</span> Brokers
-        </h1>
-      </div>
-    </a>
-    <div class='items-center mx-auto mt-4 sm:mt-2'>
+  <footer class='py-20 border-t flex flex-col sm:flex-row justify-between'>
+    <div class='mb-8 sm:mb-0'>
+      <a href='/' class='flex-initial'>
+        <div class='flex items-center'>
+          <img
+            src='/bed-brokers-logo.svg'
+            width='500'
+            height='500'
+            class='w-16 h-16 sm:w-24 sm:h-24'
+          />
+          <h1 class='ml-1 text-2xl sm:text-4xl font-bold'>
+            <span class='text-custom-blue'>Bed</span> Brokers
+          </h1>
+        </div>
+      </a>
+    </div>
+
+    <div class='mb-8 sm:mb-0'>
       <p class='font-semibold'>Contact</p>
       <div class='flex items-center space-x-2 mt-4'>
-        <a href='tel:14807882403' class='flex'>
-          <Phone />
-          480-788-2403</a
-        >
+        <a href='tel:14807882403' class='flex items-center'>
+          <Phone class='w-5 h-5 mr-2' />
+          480-788-2403
+        </a>
       </div>
     </div>
-    <div class='items-center mx-auto mt-4 sm:mt-2'>
+
+    <div>
       <p class='font-semibold'>Social</p>
-      <a href='https://www.instagram.com/phxbedbrokers/'>
+      <a
+        href='https://www.instagram.com/phxbedbrokers/'
+        class='inline-block mt-4'
+      >
         <img
           src='/instagram.svg'
           width='500'
           height='500'
-          class='w-4 h-4 sm:w-6 sm:h-6 mt-4'
+          class='w-4 h-4 sm:w-6 sm:h-6'
         />
       </a>
     </div>
