--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,10 @@ const { title = 'Bed Brokers' } = Astro.props;
       name='description'
       content="Welcome to your top discount mattress store in Phoenix, where we offer premium mattresses at rock-bottom prices. With us at Bed Brokers, you don't need a fortune to invest in your sleep. Discover a wide range of discount mattresses that combine luxury and affordability. Shop with us to find the best deals on quality mattresses without breaking the bank."
     />
+    <meta
+      property='og:image'
+      content='https://azbedbrokers.com/bed-brokers-logo.svg'
+    />
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/bed-brokers-logo.svg' />
     <meta name='generator' content={Astro.generator} />
