--- a/src/components/site/homepage/CurrentInventory.astro
+++ b/src/components/site/homepage/CurrentInventory.astro
@@ -58,8 +58,8 @@ const items = [
       Never Pay Full Price For A Mattress Again
     </p>
     <Button
-      text='Invest in Your Next Best Rest   🚀 | Text Us '
-      link="sms:+14807882403?body=Hey! I'm ready for my best sleep 😴. What do you have in stock right now? 😁"
+      text='Invest in Your Next Best Rest 🚀'
+      link="sms:+14807882403?body=Hey! I' ready for my best sleep 😴. What do you have in stock right now? 😁"
     />
 
     <p class='mt-6 text-lg leading-8'>See our current inventory below:</p>
