--- a/src/components/site/homepage/Banner.astro
+++ b/src/components/site/homepage/Banner.astro
@@ -1,3 +1,7 @@
 <div class='mt-10 sm:mt-12'>
-  <img src='/banner.png' class='shadow-md' />
+  <img
+    src='/banner.png'
+    class='shadow-md'
+    alt='banner image displaying mattresses and beds'
+  />
 </div>
