--- a/src/components/site/homepage/CurrentInventory.astro
+++ b/src/components/site/homepage/CurrentInventory.astro
@@ -50,16 +50,17 @@ const items = [
 ---
 
 <div class='px-6 mx-auto mt-10 sm:mt-12 max-w-7xl lg:px-8'>
-  <div class='max-w-2xl mx-auto lg:text-center'>
+  <div class='max-w-4xl mx-auto lg:text-center'>
     <h2 class='text-xl font-semibold leading-7'>
-      We Service All of Phoenix, Mesa, Tempe, Gilbert, and Chandler
+      We deliver all over the Valley: Phoenix, Buckeye, Mesa, Tempe, Gilbert,
+      Chandler, and More
     </h2>
-    <p class='mt-2 text-3xl font-bold tracking-tight sm:text-5xl'>
+    <h3 class='mt-2 text-3xl font-bold tracking-tight sm:text-5xl'>
       Never Pay Full Price For A Mattress Again
-    </p>
+    </h3>
     <Button
       text='Invest in Your Next Best Rest 🚀'
-      link="sms:+14807882403?body=Hey! I' ready for my best sleep 😴. What do you have in stock right now? 😁"
+      link="sms:+14807882403?body=Hey! I'm ready for my best sleep 😴. What do you have in stock right now? 😁"
     />
 
     <p class='mt-6 text-lg leading-8'>See our current inventory below:</p>
