--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import CurrentInventory from '@components/site/homepage/CurrentInventory.astro';
 export const prerender = true;
 ---
 
-<Layout title=`Bed Brokers | You Don't Need a Fortune To Invest In Your Sleep`>
+<Layout title=`Discount Mattress Store | Bed Brokers`>
   <Hero />
   <Banner />
   <CurrentInventory />
