--- a/src/components/site/Hero.astro
+++ b/src/components/site/Hero.astro
@@ -1,9 +1,9 @@
 <div class='mt-6 sm:mt-12'>
   <div class='max-w-3xl sm:max-w-4xl text-center mx-auto'>
     <h1 class='block text-3xl font-bold sm:text-5xl'>
-      Your source for <span class='italic font-bold text-green-600'
-        >premium</span
-      > 📈 mattresses at <br class='sm:hidden' />
+      Your discount mattress store for <span
+        class='italic font-bold text-green-600'>premium</span
+      > 📈 mattresses at <br />
       <span class='italic font-bold text-red-600'>rock bottom</span> prices 📉
     </h1>
     <p class='mt-3 text-xl sm:text-2xl'>
