--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,12 +19,15 @@ const { title = 'Bed Brokers' } = Astro.props;
       name='description'
       content="Welcome to your top discount mattress store in Phoenix, where we offer premium mattresses at rock-bottom prices. With us at Bed Brokers, you don't need a fortune to invest in your sleep. Discover a wide range of discount mattresses that combine luxury and affordability. Shop with us to find the best deals on quality mattresses without breaking the bank."
     />
-    <meta
-      property='og:image'
-      content='https://azbedbrokers.com/bed-brokers-logo.svg'
-    />
+    <meta property='og:image' content='https://azbedbrokers.com/banner.png' />
     <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/bed-brokers-logo.svg' />
+    <link rel='apple-touch-icon' sizes='180x180' href='/apple-touch-icon.png' />
+    <link rel='icon' type='image/png' sizes='32x32' href='/favicon-32x32.png' />
+    <link rel='icon' type='image/png' sizes='16x16' href='/favicon-16x16.png' />
+    <link rel='manifest' href='/site.webmanifest' />
+    <link rel='mask-icon' href='/safari-pinned-tab.svg' color='#5bbad5' />
+    <meta name='msapplication-TileColor' content='#2d89ef' />
+    <meta name='theme-color' content='#ffffff' />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
