--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,8 @@ const { title = 'Bed Brokers' } = Astro.props;
     <meta name='msapplication-TileColor' content='#2d89ef' />
     <meta name='theme-color' content='#ffffff' />
     <meta name='generator' content={Astro.generator} />
+    <link rel='canonical' href={Astro.url} />
+
     <title>{title}</title>
   </head>
   <body>
