--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title = 'Bed Brokers' } = Astro.props;
     <meta charset='UTF-8' />
     <meta
       name='description'
-      content="Welcome to your top discount mattress store in Phoenix, where we offer premium mattresses at rock-bottom prices. With us at Bed Brokers, you don't need a fortune to invest in your sleep. Discover a wide range of discount mattresses that combine luxury and affordability. Shop with us to find the best deals on quality mattresses without breaking the bank."
+      content='Welcome to Bed Brokers! Shop with us to find the best deals on premium mattresses without breaking the bank. Same day delivery and pickup.'
     />
     <meta property='og:image' content='https://azbedbrokers.com/banner.png' />
     <meta name='viewport' content='width=device-width' />
