--- a/src/components/site/Announcement.astro
+++ b/src/components/site/Announcement.astro
@@ -1,9 +1,9 @@
 ---
 // AnnouncementTicker.astro
 const messages = [
-  'Call or Text For Appointments: 480-788-2403 📞',
+  'Call or Text For Appointments: 📞 480-788-2403 ',
   "Send us a text 📲 and get a <span class='italic'>FREE</span> mattress protector with purchase",
-  '📚 Back to School sale 20% off all memory foam mattresses ',
+  // '📚 Back to School sale 20% off all memory foam mattresses ',
   "🚚 <span class='italic'>FREE</span>  Delivery",
 ];
 
