--- a/src/components/site/FAQ.astro
+++ b/src/components/site/FAQ.astro
@@ -14,7 +14,7 @@
       @click='active = active === 1 ? null : 1'
       :class="{ 'mb-2': active === 1 }"
     >
-      <span class='font-semibold'
+      <span class='font-semibold text-xl'
         >How does your mattress delivery process work?</span
       >
       <svg
@@ -54,7 +54,7 @@
       @click='active = active === 2 ? null : 2'
       :class="{ 'mb-2': active === 2 }"
     >
-      <span class='font-semibold'
+      <span class='font-semibold text-xl'
         >What makes your prices better than retail stores?</span
       >
       <svg
@@ -94,7 +94,7 @@
       @click='active = active === 3 ? null : 3'
       :class="{ 'mb-2': active === 3 }"
     >
-      <span class='font-semibold'
+      <span class='font-semibold text-xl'
         >Do you offer warranties on your mattresses?</span
       >
       <svg
